@@ -1756,6 +1756,31 @@ module.exports.exports.connect = function connect (config, callback) {
     }
   }
 
+  const ogClose = globalConnection.close
+
+  function globalClose (callback) {
+    // remove event handlers from the global connection
+    for (let event in globalConnectionHandlers) {
+      for (let i = 0, l = globalConnectionHandlers[event].length; i < l; i++) {
+        this.removeListener(event, globalConnectionHandlers[event][i])
+      }
+    }
+
+    // attach error handler to prevent process crash in case of error
+    this.on('error', err => {
+      if (globalConnectionHandlers['error']) {
+        for (let i = 0, l = globalConnectionHandlers['error'].length; i < l; i++) {
+          globalConnectionHandlers['error'][i].call(this, err)
+        }
+      }
+    })
+
+    globalConnection = null
+    return ogClose.call(this, callback)
+  }
+
+  globalConnection.close = globalClose.bind(globalConnection)
+
   return globalConnection.connect(callback)
 }
 
@@ -1768,22 +1793,6 @@ module.exports.exports.connect = function connect (config, callback) {
 
 module.exports.exports.close = function close (callback) {
   if (globalConnection) {
-    // remove event handlers from the global connection
-    for (let event in globalConnectionHandlers) {
-      for (let i = 0, l = globalConnectionHandlers[event].length; i < l; i++) {
-        globalConnection.removeListener(event, globalConnectionHandlers[event][i])
-      }
-    }
-
-    // attach error handler to prevent process crash in case of error
-    globalConnection.on('error', err => {
-      if (globalConnectionHandlers['error']) {
-        for (let i = 0, l = globalConnectionHandlers['error'].length; i < l; i++) {
-          globalConnectionHandlers['error'][i].call(globalConnection, err)
-        }
-      }
-    })
-
     const gc = globalConnection
     globalConnection = null
     return gc.close(callback)
